plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '4.0.4'
}

group 'org.com.goct'
version '1.0'
mainClassName = 'com.goct.Bot'
compileJava.options.encoding = 'UTF-8'
sourceCompatibility = JavaVersion.VERSION_11

repositories {
    jcenter()
}

dependencies {
    compile group: 'net.dv8tion', name: 'JDA', version: '4.1.1_136'
    compile group: 'com.jagrosh', name: 'jda-utilities', version: '3.0.3'
    compile group: 'me.duncte123', name: 'botCommons', version: '1.0.83'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
    compile group: 'io.github.cdimascio', name: 'java-dotenv', version: '5.1.3'
    compile group: 'org.menudocs', name: 'paste-client-java', version: '1.0.25'
    compile group: 'com.sedmelluq', name: 'lavaplayer', version: '1.3.46'
}

applicationName = "slave"

//task stage(dependsOn: ['clean', 'build'])

task stage {
    dependsOn run
}